refactor(array-handler): 优化数组处理器实现
- 移除未使用的缓存变量注释代码
- 将路径点获取方式从索引访问改为getLast()方法调用
- 简化代码逻辑提升可读性